# tsd

./: .gitignore  .tsdrc  AGENTS.md  Makefile  README  README.md  bash_tsd  cflake  index.html  install.sh  params.json  pyproject.toml  test_tsd.py  tsd.py
.github/workflows/: ci.yml
docs/notes/: BUGS.md  BUGS2.md
docs/tsm/: v2-notes.txt
scripts/: tsd_w_sum.py  tsd_year_scatter.py
shell/: tsd.bash
src/tsd/: __init__.py  __main__.py  cli.py  time_to_empty.py
test_data/: test-flat  test-short
tests/: test_time_to_empty.py  test_tsd.py  test_tsd_plot.py  test_tsd_seasonal.py
tests/data/: test-bulge  test-square
tests/fixtures/home/: .tsdrc
tsm/: dsl-examples.txt  dsl.txt  v2-notes.txt
util/: tsd_year_scatter.py
