[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "tsd"
version = "0.1.0"
description = "Command-line tool for maintaining simple daily time series data."
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["python-dateutil"]

[project.optional-dependencies]
dev = ["black==24.4.2", "pyflakes", "pytest"]

[project.scripts]
tsd = "tsd.cli:main"

[tool.black]
target-version = ["py39"]
extend-exclude = '''
/\.venv/
'''

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
